Edited wiki page through web user interface.

--- a/wiki/AllTask.wiki
+++ b/wiki/AllTask.wiki
@@ -6,6 +6,6 @@
  * 使用Subversion进行版本控制：daijun@gmail.com
  * TortoiseSVN手册：
  * Submerged中文版：lsidss@gmail.com
- * TortoiseSVN Blog中文版：
+ * TortoiseSVN Blog中文版：racoonwise@gmail.com
 
 其它请自行添加：
