Edited wiki page through web user interface.

--- a/wiki/AllTask.wiki
+++ b/wiki/AllTask.wiki
@@ -3,7 +3,7 @@
 ==工作安排：==
  * Subversion FAQ：zhaozhi.1983@gmail.com
  * TortoiseSVN FAQ：Neil.Creater@gmail.com
- * 使用Subversion进行版本控制：daijun@gmail.com
+ * 使用Subversion进行版本控制：daijun@gmail.com,videomailweb@gmail.com
  * TortoiseSVN手册：
  * Submerged中文版：lsidss@gmail.com
  * TortoiseSVN Blog中文版：racoonwise@gmail.com
