--- a/wiki/AllTask.wiki
+++ b/wiki/AllTask.wiki
@@ -4,7 +4,7 @@
  * Subversion FAQ：zhaozhi.1983@gmail.com
  * TortoiseSVN FAQ：Neil.Creater@gmail.com
  * 使用Subversion进行版本控制：daijun@gmail.com,videomailweb@gmail.com
- * TortoiseSVN手册：
+ * TortoiseSVN手册：alex.zhu.az<AT>g m a i l. c o m
  * Submerged中文版：lsidss@gmail.com
  * TortoiseSVN Blog中文版：racoonwise@gmail.com
 
