Edited wiki page through web user interface.

--- a/wiki/AllTask.wiki
+++ b/wiki/AllTask.wiki
@@ -4,8 +4,9 @@
  * Subversion FAQ：zhaozhi.1983@gmail.com,myplaylife@gmail.com
  * TortoiseSVN FAQ：Neil.Creater@gmail.com
  * 使用Subversion进行版本控制：daijun@gmail.com,videomailweb@gmail.com
- * TortoiseSVN手册：alex.zhu.az<AT>g m a i l. c o m
+ * TortoiseSVN手册：alex.zhu.az<AT>g m a i l. c o m, ynding@gmail.com
  * Submerged中文版：lsidss@gmail.com
  * TortoiseSVN Blog中文版：racoonwise@gmail.com
+
 
 其它请自行添加：
