--- a/wiki/AllTask.wiki
+++ b/wiki/AllTask.wiki
@@ -6,7 +6,7 @@
  * 使用Subversion进行版本控制：daijun@gmail.com,videomailweb@gmail.com
  * TortoiseSVN手册：alex.zhu.az<AT>g m a i l. c o m, ynding@gmail.com
  * Submerged中文版：lsidss@gmail.com
- * TortoiseSVN Blog中文版：racoonwise@gmail.com
+ * TortoiseSVN Blog中文版：racoonwise@gmail.com, laiqinyi@gmail.com
  * design.html : 
  * tools_contrib.html : 
 
