--- a/wiki/SVNTerminology.wiki
+++ b/wiki/SVNTerminology.wiki
@@ -1,4 +1,4 @@
-# 对通用的 SVN 术语翻译进行统一，以期 SVN 文档的中文翻译更规范。
+#summary 对通用的 SVN 术语翻译进行统一，以期 SVN 文档的中文翻译更规范。
 
 == 对通用的 SVN 术语翻译进行统一，以期 SVN 文档的中文翻译更规范。 ==
 
